--- a/source/sass/_global_elements.scss
+++ b/source/sass/_global_elements.scss
@@ -217,12 +217,14 @@
         background-image: url(/assets/img/arrows/blue-arrow.png);
     }
 
+    .blog &,
     .resources-detail & {
         left: 50px;
         right: auto;
     }
 
     @media #{$screen} and (min-width: 930px) {
+        .blog &,
         .resources-detail & {
             right: 45px;
             left: auto;
