--- a/source/sass/_layout.scss
+++ b/source/sass/_layout.scss
@@ -4,6 +4,10 @@
     max-width: 766px;
     padding: 0 25px;
     overflow: auto;
+
+    @media #{$medium-up} {
+        overflow: visible;
+    }
 }
 
 .l-content--centered {
