--- a/source/sass/_resources.scss
+++ b/source/sass/_resources.scss
@@ -1,19 +1,30 @@
+.resources {
+    overflow: hidden;
+    overflow-y: scroll;
+}
+
 .resources-grid {
     margin: 0 auto;
     max-width: 851px;
     width: 100%;
     height: 100%;
     position: relative;
+    @include flexbox;
+    @include flex-wrap(wrap);
+    @include justify-content(center);
 
     .thumb {
-        //margin-left: 13px;
         margin-bottom: 20px;
         position: relative;
         height: 293px;
         overflow: hidden;
         width: 275px;
         z-index: 0;
-        display: inline-block;
+        margin-right: 13px;
+
+        &:nth-child(3n) {
+            margin-right: 0;
+        }
     }
 }
 
