--- a/source/sass/modules/_scrollbar.scss
+++ b/source/sass/modules/_scrollbar.scss
@@ -4,7 +4,7 @@
 .resources::-webkit-scrollbar,
 .about::-webkit-scrollbar {
     width: 24px;
-    height: auto;
+    //height: auto;
 }
 
 .start-a-school::-webkit-scrollbar-track,
