--- a/source/sass/modules/_slideshow.scss
+++ b/source/sass/modules/_slideshow.scss
@@ -50,9 +50,9 @@
     }
 
     .slick-initialized .slick-slide {
-        height: auto;
+        //height: auto;
         margin: auto;
-        padding: 25px;
+        position: relative;
     }
 
     .slick-prev {
@@ -72,7 +72,14 @@
 
 .slick-slide img,
 .lightbox-image {
-    margin: 0 auto;
+    max-height: 100%;
+    padding: 25px;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 .touch {
